# dual_arm

./: .gitignore  AGENTS.md  OPENCODE_KEYBINDS.md  README.md  Unity_v2022.3.62f3.alf  soem-pp-waypoint-ros-bridge-a54ad6.md  state.yaml
.codex/: NOTES.md  README.md  SERVO_HANDOFF.md  TASKS.md
SOEM/: .gitignore  CMakeLists.txt
SOEM/docs/: CIA402_diagnostic_report.md  PO2SO.txt  ec_sample_pp_rt_sync_notes.md  ec_sample_pp_success_notes.md  pdo_byte_decoding.md  sdo_dump.txt  slaveinfo_analysis.md
SOEM/include/soem/: ec_main.h
SOEM/osal/linux/: osal.c  osal_defs.h
SOEM/samples/ec_sample/: ec_sample.c
SOEM/samples/simple_ng/: simple_ng.c
SOEM/samples/slaveinfo/: slaveinfo.c
SOEM/samples/test/: CMakeLists.txt
SOEM/samples/test/csp_test/: CMakeLists.txt  csp_test.c
SOEM/samples/test/cst_test/: CMakeLists.txt  cst_test.c
SOEM/samples/test/csv_test/: CMakeLists.txt  csv_test.c
SOEM/scripts/: eniconv.py
SOEM/src/: ec_config.c  ec_dc.c  ec_main.c
SOEM/tools/: hex_to_bin_gui.py
docs/: cpp_basics.md  lerobot_handoff_2026-07-16.md  lerobot_integration.md  moveit_rviz_ik_marker_debugging.md  project_manual.md  prompt.txt  ros2_core_concepts.md  ros2_debugging_notes.md  ros2_spin_and_callbacks.md  run_commands.md  soem-pp-waypoint-ros-bridge-a54ad6.md  unity_pico_notes.md  vr_teleop_handoff_2026-07-15.md  vr_usage.md
dual_arm_bringup/: CMakeLists.txt  package.xml
dual_arm_bringup/config/: lerobot_bridge.yaml  ready_pose.yaml
dual_arm_bringup/launch/: control_base.launch.py  lerobot_bridge.launch.py  real.launch.py  sim.launch.py
dual_arm_bringup/scripts/: clean_ros.py  clean_ros.sh  move_to_ready.py  start_dual_arm  zmq_bridge_node.py
dual_arm_control/: CMakeLists.txt  CUSTOM_CONTROLLER_TODO.md  REAL_HARDWARE_GUIDE.md  hardware_plugin_description.xml  package.xml
dual_arm_control/include/dual_arm_control/: dual_arm_hardware.hpp  visibility_control.h
dual_arm_control/src/: dual_arm_hardware.cpp
dual_arm_description/: .gitignore  AGENTS.md  CMakeLists.txt  joint_control_panel.py  notes.md  package.xml  urdf.rviz
dual_arm_description/launch/: display_rviz2.launch.py
dual_arm_description/meshes/: laxis3_link.STL  laxis4_link.STL  laxis5_link.STL  laxis6_link.STL  laxis7_link.STL  raxis3_link.STL  raxis4_link.STL  raxis5_link.STL  raxis6_link.STL  raxis7_link.STL
dual_arm_description/scripts/: move_to_pose.py
dual_arm_description/urdf/: dual_arm_1kg.csv  dual_arm_1kg.urdf  dual_arm_1kg.urdf.xacro
dual_arm_moveit_config/: CMakeLists.txt  package.xml
dual_arm_moveit_config/config/: TODO_velocity_loop.md  dual_arm_1kg.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers_real.yaml  servo.rviz
dual_arm_moveit_config/docs/: control_architecture.md  topics_and_services.md
dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  rviz.launch.py
dual_arm_servo/: CMakeLists.txt  README.md  package.xml
dual_arm_servo/config/: kinematics.yaml  rviz_servo_marker.yaml  servo_left.yaml  servo_right.yaml
dual_arm_servo/dual_arm_servo/: keyboard_teleop.py  rviz_servo_marker.py
dual_arm_servo/launch/: servo.launch.py  servo_control.launch.py
dual_arm_servo/src/: keyboard_teleop.py  trajectory_bridge.py
dual_arm_soem_bridge/: CMakeLists.txt  package.xml
dual_arm_soem_bridge/config/: soem_bridge.yaml
dual_arm_soem_bridge/include/dual_arm_soem_bridge/: soem_master.hpp  soem_pp_master.hpp
dual_arm_soem_bridge/launch/: soem_bridge.launch.py
dual_arm_soem_bridge/src/: soem_bridge_node.cpp  soem_master.cpp  soem_pp_master.cpp
rosbag2_2026_06_11-22_55_36/: metadata.yaml  rosbag2_2026_06_11-22_55_36_0.mcap
tools/: clean_ros_runtime.sh  kick_servo_state_monitor.py
tools/unity/: UnityHub.AppImage
utils/: bake_joint_offset.py  plot_trajectory.py
vr_teleop_bridge/: CMakeLists.txt  package.xml
vr_teleop_bridge/config/: trajectory_logger.yaml  vr_move_group_bridge.yaml  vr_teleop_bridge.yaml
vr_teleop_bridge/launch/: vr_move_group_bridge.launch.py  vr_teleop_bridge.launch.py  vr_with_tcp_endpoint.launch.py
vr_teleop_bridge/vr_teleop_bridge/: trajectory_logger_node.py  vr_pose_to_move_group_node.py  vr_pose_to_servo_node.py
vrtest-full-lite/docs/: merge_dual_arm_plan.md
vrtest-full-lite/vrtest/: .gitignore  AGENTS.md
vrtest-full-lite/vrtest-package/: README.md  start_ros.sh
vrtest-full-lite/vrtest-package/ros2-tools/: vr_hand_subscriber.py
vrtest-full-lite/vrtest/Assets/: VRHandPublisher.cs
vrtest-full-lite/vrtest/Assets/Resources/: PXR_PlatformSetting.asset  ROSConnectionPrefab.prefab
vrtest-full-lite/vrtest/Assets/Samples/XR Interaction Toolkit/2.6.4/Starter Assets/: DemoScene.unity
vrtest-full-lite/vrtest/Assets/Scenes/: test.unity
vrtest-full-lite/vrtest/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
vrtest-full-lite/vrtest/Assets/XR/Settings/: OpenXR Package Settings.asset
vrtest-full-lite/vrtest/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
