<?xml version="1.0"?>
<package format="3">
  <name>dual_arm_servo</name>
  <version>0.0.1</version>
  <description>MoveIt Servo configuration for dual-arm robot</description>
  <maintainer email="dell@todo.todo">dell</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
