<?xml version="1.0"?>
<package format="3">
  <name>dual_arm_servo</name>
  <version>0.0.1</version>
  <description>MoveIt Servo configuration for dual-arm robot</description>
  <maintainer email="dell@todo.todo">dell</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>dual_arm_description</exec_depend>
  <exec_depend>dual_arm_moveit_config</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
